See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.98.00

              pnmtosir: Set some possibly meaningless bits in output to zero
              so output is repeatable.

              pnmtorle: fix bug: -h works only on first image.

              pamsistoaglyph: Fix invalid memory reference and incorrect
              output on depth 1 input.  Always broken.  (pamsistoaglyph was
              new in Netpbm 10.47 (June 2009).  Thanks Scott Pakin.

              pambayer: Fix bogus colors at edges.  Always Broken (pambayer
              was new in Release 10.30 (October 2005)).

              libnetpbm, various programs: fix bug: bogus warning that a color
              specified on command line cannot be represented exactly with the
              maxval being used.  Introduced in Netpbm 10.83 (June 2018).

              pnmtopsnr: Fix typo in error message.  Always broken (pnmpsnr
              was new in Netpbm 9.6 (July 2000).

              ppmtoilbm: Remove -floyd (aka -fs) option, which hasn't worked
              in a long time if ever and is inappropriate function for this
              program.  And the broken code is inconsistent with new random
              number logic elsewhere in the package.

              ppmtoapplevol: Fix bug: reads from Standard Input even when you
              specify the input file argument.  Always broken.  (ppmtoapplevol
              was new in Netpbm 10.54 (March 2011).

              ppmtoapplevol: Fix bug: produces garbage with input image wider
              than 255.  Always broken.  (ppmtoapplevol was new in Netpbm
              10.54 (March 2011).

              pgmmedian: fix crash when median matrix is wider or higher than
              the input image.

              picttoppm: Fix incorrect output for 32 bit per pixel images
              that have only 3 planes.  Broken in Netpbm 10.34 (June 2006).
